--- a/sass/index.scss
+++ b/sass/index.scss
@@ -95,6 +95,12 @@
                     height: 162px;
                     padding-top: 12px;
                     overflow: hidden;
+                    .grayFlag {
+                        width: 25px;
+                        height: 20px;
+                        margin: 0 auto;
+                        background-color: #A7A4A4;
+                    }
                     span {
                         display: block;
                         margin-bottom: 10px;
